# bspline-fitting

./: .gitignore  CMakeLists.txt  README.md  auto_run.sh  compile.sh  compile_with_cuda.sh  convert.py  demo.py  dev_setup.sh  run.sh  server.py  setup.py  setup.sh  train.py
bspline_fitting/Config/: test_data.py
bspline_fitting/Cpp/: main.cpp
bspline_fitting/Cpp/include/: fitting.h  trainer.h  value.h  value_torch.h
bspline_fitting/Cpp/src/: bindings.cpp  fitting.cpp  trainer.cpp  value.cpp  value_torch.cpp
bspline_fitting/Data/: surface.py
bspline_fitting/Demo/: approximate_surface.py  surface_fit.py  trainer.py
bspline_fitting/Method/: check.py  fitting.py  pcd.py  render.py  value.py
bspline_fitting/Model/: bspline_surface.py
bspline_fitting/Module/: fitter.py  server.py  trainer.py
include/: bspline_surface.h  scheduler.h  trainer.h  value_torch.h
pmodule/: setup.py
pmodule/Demo/: server.py  trainer.py
pmodule/Loss/: chamfer_distance.py
pmodule/Method/: fitting.py  render.py
pmodule/Model/: bspline_surface.py
pmodule/Module/: trainer.py
src/: bindings.cpp  bspline_surface.cpp  main.cpp  trainer.cpp  value.cpp  value_torch.cpp
